[project]
name = "langchain-logbook"
version = "0.1.0"
description = "🚢 LangChain 1.2.x Agent-First 航海日志：2026 智能体工程深度实战指南"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bpython>=0.26",
    "ipykernel>=7.2.0",
    "jieba>=0.42.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=4.0.6",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
